--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,7 +13,7 @@
 @import "header.css";
 @import "footer.css";
 @import "main-layout.css";
-@import "schools-card.css";
+@import "article-card.css";
 @import "inner-page.css";
 @import "main-search-form.css";
 @import "contact-form.css";
