--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,235 +1,233 @@
 .page-header {
-	position: relative;
-	margin-bottom: 20px;
-	background-color: var(--menu-bg);
-	border-bottom: 5px solid var(--main-yellow);
+    position: relative;
+    margin-bottom: 20px;
+    background-color: var(--menu-bg);
+    border-bottom: 5px solid var(--main-yellow);
 }
 
 .page-header__wrapper {
-	width: 100%;
-	max-width: 1280px;
-	margin: 0 auto;
-	padding: 0 1vw;
-	display: flex;
-	flex-direction: column;
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0 1vw;
+    display: flex;
+    flex-direction: column;
 }
 
 .toggle-menu {
-	display: none;
+    display: none;
 }
 
 .page-header__top {
-	display: flex;
-	align-items: baseline;
-	margin: 12px 0;
+    display: flex;
+    align-items: baseline;
+    margin: 12px 0;
 }
 
 .page-header__logo {
-	margin: 5px 10px;
+    margin: 5px 10px;
 }
 
 .page-header__main-nav {
-	margin: 10px 0 6px;
-	flex: 1;
-	overflow-y: auto;
+    margin: 10px 0 6px;
+    flex: 1;
+    overflow-y: auto;
 }
 
 .lang-switch a {
-	display: inline-block;
-	font-size: 18px;
-	text-transform: uppercase;
-	color: #000000;
-	background: rgba(256,256,256,.25);
-	border: 1px solid var(--main-yellow);
-	border-radius: 2px;
-	margin: 0 3px;
-	padding: 3px 10px;
+    display: inline-block;
+    font-size: 18px;
+    text-transform: uppercase;
+    color: #000000;
+    background: rgba(256, 256, 256, .25);
+    border: 1px solid var(--main-yellow);
+    border-radius: 2px;
+    margin: 0 3px;
+    padding: 3px 10px;
 }
 
 .lang-switch a:hover {
-	background: rgba(256,256,256,.5);
+    background: rgba(256, 256, 256, .5);
 }
 
 .user-menu {
-	display: flex;
-	margin: 0px;
-	margin-left: auto;
-	padding: 0;
-	list-style: none;
+    display: flex;
+    margin: 0px;
+    margin-left: auto;
+    padding: 0;
+    list-style: none;
 }
 
 .user-menu a {
-	display: block;
-	position: relative;
-	margin-left: 2vw;
-	padding: 5px 10px;
-	font-size: 20px;
-	color: var(--menu-text-color);
-	text-shadow: var(--menu-text-shadow);
+    display: block;
+    position: relative;
+    margin-left: 2vw;
+    padding: 5px 10px;
+    font-size: 20px;
+    color: var(--menu-text-color);
+    text-shadow: var(--menu-text-shadow);
 }
 
 .user-menu li:not(.current) a:hover::before {
-	content: "";
-	display: block;
-	position: absolute;
-	width: calc(100% - 16px);
-	height: 2px;
-	background-color: var(--menu-text-color);
-	left: 8px;
-	bottom: 0;
+    content: "";
+    display: block;
+    position: absolute;
+    width: calc(100% - 16px);
+    height: 2px;
+    background-color: var(--menu-text-color);
+    left: 8px;
+    bottom: 0;
 }
 
 .user-menu .current a::before {
-	content: "";
-	display: block;
-	position: absolute;
-	width: calc(100% - 16px);
-	height: 2px;
-	background-color: var(--main-blau);
-	left: 8px;
-	bottom: 0;
+    content: "";
+    display: block;
+    position: absolute;
+    width: calc(100% - 16px);
+    height: 2px;
+    background-color: var(--main-blau);
+    left: 8px;
+    bottom: 0;
 }
 
 .top-logo__link {
-	display: flex;
-	align-items: baseline;
+    display: flex;
+    align-items: baseline;
 }
 
 .top-logo__name {
-	margin: 0;
-	margin-left: 30px;
-	margin-bottom: 12px;
-	color: #333333;
-	-webkit-text-stroke: 1px #FFAA4B;
-	font-size: calc(32px + 2vw);
-	font-weight: 300;
+    margin: 0;
+    margin-left: 30px;
+    margin-bottom: 12px;
+    color: #333333;
+    -webkit-text-stroke: 1px #FFAA4B;
+    font-size: calc(32px + 2vw);
+    font-weight: 300;
 }
 
-
 .main-nav-list {
-	display: flex;
-	justify-content: space-between;
-	margin: 0px;
-	padding: 0;
-	list-style: none;
+    display: flex;
+    justify-content: space-between;
+    margin: 0px;
+    padding: 0;
+    list-style: none;
 }
 
 .main-nav-list a {
-	display: block;
-	position: relative;
-	padding: 12px 10px;
-	font-size: 20px;
-	text-transform: uppercase;
-	letter-spacing: 0.3px;
-	color: var(--menu-text-color);
-	text-shadow: var(--menu-text-shadow);
+    display: block;
+    position: relative;
+    padding: 12px 10px;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 0.3px;
+    color: var(--menu-text-color);
+    text-shadow: var(--menu-text-shadow);
 }
 
 .main-nav-list li:not(.current) a:hover::before {
-	content: "";
-	display: block;
-	position: absolute;
-	width: calc(100% - 16px);
-	height: 2px;
-	background-color: var(--menu-text-color);
-	left: 8px;
-	bottom: 7px;
+    content: "";
+    display: block;
+    position: absolute;
+    width: calc(100% - 16px);
+    height: 2px;
+    background-color: var(--menu-text-color);
+    left: 8px;
+    bottom: 7px;
 }
 
 .main-nav-list .current a {
-	background-color: var(--main-blau);
-	color: var(--menu-bg);
-	text-shadow: unset;
+    background-color: var(--main-blau);
+    color: var(--menu-bg);
+    text-shadow: unset;
 }
-
 
 @media (max-width: 1000px) {
 
-	.page-header__holder {
-		height: 51px;
-		margin-bottom: 2vw;
-	}
+    .page-header__holder {
+        height: 51px;
+        margin-bottom: 2vw;
+    }
 
-	.page-header {
-		position: fixed;
-		top: 0;
-		left: 0;
-		right: 0;
-		height: 51px;
-		z-index: 1000;
-		margin-bottom: 20px;
-		background-color: var(--menu-bg);
-		border-bottom: none;
-	}
-	
-	.toggle-menu {
-		display: block;
-		position: fixed;
-		top: 3px;
-		left: 3px;
-	}
+    .page-header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 51px;
+        z-index: 1000;
+        margin-bottom: 20px;
+        background-color: var(--menu-bg);
+        border-bottom: none;
+    }
 
-	.page-header__wrapper {
-		position: fixed;
-		top: 0;
-		left: 56px;
-		width: calc(100% - 56px);
-		min-height: 100%;
-		background-color: var(--menu-bg);
-		box-shadow: 0px 51px 15px 0px black;
-	}
+    .toggle-menu {
+        display: block;
+        position: fixed;
+        top: 3px;
+        left: 3px;
+    }
 
-	.page-header__top {
-		flex-direction: column;
-		align-items: center;
-		margin-bottom: 0;
-		border-bottom: 1px solid var(--main-yellow);
-	}
+    .page-header__wrapper {
+        position: fixed;
+        top: 0;
+        left: 56px;
+        width: calc(100% - 56px);
+        min-height: 100%;
+        background-color: var(--menu-bg);
+        box-shadow: 0px 51px 15px 0px black;
+    }
 
-	.lang-switch {
-		border-bottom: 1px solid var(--main-yellow);
-    border-top: 1px solid var(--main-yellow);
-    padding: 10px 20px;
-	}
+    .page-header__top {
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 0;
+        border-bottom: 1px solid var(--main-yellow);
+    }
 
-	.user-menu {
-		flex-direction: column;
-		align-items: center;
-		margin: 12px auto;
-	}
+    .lang-switch {
+        border-bottom: 1px solid var(--main-yellow);
+        border-top: 1px solid var(--main-yellow);
+        padding: 10px 20px;
+    }
 
-	.user-menu a {
-		margin: 0;
-		padding: 10px;
-		text-transform: uppercase;
-	}
+    .user-menu {
+        flex-direction: column;
+        align-items: center;
+        margin: 12px auto;
+    }
 
-	.page-header__logo {
-		order: -1;
-	}
+    .user-menu a {
+        margin: 0;
+        padding: 10px;
+        text-transform: uppercase;
+    }
 
-	.top-logo__link {
-		flex-direction: column;
-		align-items: center;
-	}
+    .page-header__logo {
+        order: -1;
+    }
 
-	.top-logo__name {
-		margin: 15px 0 0 0;
-		font-size: 26px;
-		
-	}
+    .top-logo__link {
+        flex-direction: column;
+        align-items: center;
+    }
 
-	.main-nav-list {
-		flex-direction: column;
-		align-items: center;
-	}
+    .top-logo__name {
+        margin: 15px 0 0 0;
+        font-size: 26px;
 
-	.main-nav-list a {
-		padding: 10px;
-	}
+    }
 
-	.page-header--closed .page-header__wrapper {
-		display: none;
-	}
+    .main-nav-list {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .main-nav-list a {
+        padding: 10px;
+    }
+
+    .page-header--closed .page-header__wrapper {
+        display: none;
+    }
 
 }
