--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -8,7 +8,9 @@
     --menu-text-shadow: 0px 0px 10px #333333;
 
     --footer-bg: #28a1d5;
-    --footer-text-color: #d6f2fe;
+    --footer-text-color: white;
+    --footer-text-color-hover: #505050;
+    /*--footer-text-color: #d6f2fe;*/
 
     --block-bg: #ffffff;
     --block-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
