--- a/src/css/main-layout.css
+++ b/src/css/main-layout.css
@@ -137,7 +137,7 @@
 	display: flex;
 	flex-direction: column;
 	height: 100%;
-	background-image: url(/images/surfer.jpg);
+	background-image: url(/images/kite-symbol.jpg);
 	background-position: top right;
 	background-repeat: no-repeat;
 }
