--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -10,6 +10,9 @@
     --menu-text-shadow: 0px 0px 10px #333333;
     --menu-grey-text: #555555;
 
+    --yellow-button: #eec616;
+    --yellow-button-hover: #f0c14b;
+
     --footer-bg: #28a1d5;
     --footer-text-color: white;
     --footer-text-color-hover: #505050;
